# C-CPP-projects

./: README.md  game_of_life.c  pong.c  s21_add.c  s21_decimal.h  s21_div.c  s21_from_decimal_to_float.c  s21_from_decimal_to_int.c  s21_from_float_to_decimal.c  s21_is_equal.c  s21_is_greater_or_equal.c  s21_is_less_or_equal.c  s21_mod.c  s21_mul.c  s21_negate.c  s21_round.c  s21_sub.c  s21_truncate.c
3D_Viewer v1.0/: 3DViewer.c  3DViewer.h  CMakeLists.txt  Makefile  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwidget.cpp  openglwidget.h  openglwidget.ui  qgifimage.cpp
3D_Viewer v1.0/giflib/: dgif_lib.c  gif_lib.h  gif_lib_private.h
3D_Viewer_CPP v2.0/: README.md
A1_Maze/: Makefile  README.md
A1_Maze/tests/: maze_test.cc
A2_SimpleNavigator_CPP/: README.md
A2_SimpleNavigator_CPP/src/: s21_graph  s21_graph_algorithms  start
CICD/: README.md  deployment.sh  integration_test.sh  notify.sh  style_test.sh
CICD/cat/: s21_cat.c  s21_cat.h
CPP_SmartCalc_v2.0/: Doxyfile  Makefile  README_RUS.md
SmartCalc_v1.0/: Makefile  README.md  test_calculator.c  user_guide.texi
cat/: Makefile  s21_cat.c  s21_cat.h
decimal/: Makefile  README.md  print_decimal.c  s21_add.c  s21_decimal_helpers.c  s21_from_decimal_to_float.c  s21_from_int_to_decimal.c  s21_is_equal.c  s21_mod.c  s21_negate.c  s21_round.c  s21_truncate.c
grep/: Makefile  s21_grep.c  s21_grep.h
linux1/: README.md
linux_network/: README.md
math/: Makefile  README.md  s21_abs.c  s21_acos.c  s21_asin.c  s21_atan.c  s21_ceil.c  s21_cos.c  s21_exp.c  s21_fabs.c  s21_floor.c  s21_fmod.c  s21_isinf.c  s21_isnan.c  s21_log.c  s21_math.h  s21_nod.c  s21_pow.c  s21_sin.c  s21_sqrt.c  s21_tan.c
matrix/: Makefile  README.md  s21_calc_complements.c  s21_create_matrix.c  s21_determinant.c  s21_eq_matrix.c  s21_inverse_matrix.c  s21_matrix.h  s21_mult_matrix.c  s21_mult_number.c  s21_remove_matrix.c  s21_sub_matrix.c  s21_sum_matrix.c  s21_transpose.c
stl_containers/: README.md  s21_containers.h
tests/: test_s21_add.c  test_s21_div.c  test_s21_floor.c  test_s21_from_decimal_to_float.c  test_s21_from_decimal_to_int.c  test_s21_from_float_to_decimal.c  test_s21_from_int_to_decimal.c  test_s21_is_equal.c  test_s21_is_greater.c  test_s21_is_greater_or_equal.c  test_s21_is_less.c  test_s21_is_less_or_equal.c  test_s21_is_not_equal.c  test_s21_mod.c  test_s21_mul.c  test_s21_negate.c  test_s21_round.c  test_s21_sub.c  test_s21_truncate.c
(+88 files in other folders)
